set new root and reset root node

--- a/Spacetree/Spacetree.html
+++ b/Spacetree/Spacetree.html
@@ -82,6 +82,12 @@
                 </tr>
             </table>
 
+            <h4>Reset</h4>
+            <table>
+                <tr>
+                    <td><button id="s-reset" onclick="resetPage();">Reset Button</button></td>
+                </tr>
+            </table>
         </div>
 
         <div id="log"></div>
