--- a/Spacetree/Spacetree.html
+++ b/Spacetree/Spacetree.html
@@ -30,18 +30,18 @@
             <table>
                 <tr>
                     <td>
-                        <label for="r-left">Left </label>
+                        <label for="r-top">Top </label>
                     </td>
                     <td>
-                        <input type="radio" id="r-left" name="orientation" checked="checked" value="left" />
+                        <input type="radio" id="r-top" name="orientation" checked="checked" value="top" />
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <label for="r-top">Top </label>
+                        <label for="r-left">Left </label>
                     </td>
                     <td>
-                        <input type="radio" id="r-top" name="orientation" value="top" />
+                        <input type="radio" id="r-left" name="orientation" value="left" />
                     </td>
                 </tr>
                 <tr>
