remove useless codes

--- a/Spacetree/Spacetree.html
+++ b/Spacetree/Spacetree.html
@@ -62,8 +62,8 @@
                 </tr>
             </table>
 
-            <h4>Selection Mode</h4>
-            <table>
+            <!-- <h4>Selection Mode</h4> -->
+            <table style="visibility:hidden">
                 <tr>
                     <td>
                         <label for="s-normal">Normal </label>
@@ -72,21 +72,14 @@
                         <input type="radio" id="s-normal" name="selection" checked="checked" value="normal" />
                     </td>
                 </tr>
-                <tr>
+                <!-- <tr>
                     <td>
                         <label for="s-root">Set as Root </label>
                     </td>
                     <td>
                         <input type="radio" id="s-root" name="selection" value="root" />
                     </td>
-                </tr>
-            </table>
-
-            <h4>Reset</h4>
-            <table>
-                <tr>
-                    <td><button id="s-reset" onclick="resetPage();">Reset Button</button></td>
-                </tr>
+                </tr> -->
             </table>
         </div>
 
